--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -333,7 +333,7 @@
                                     <span class="glyphicon glyphicon-lock"></span>
                                 <span class="glyphicon glyphicon-floppy-saved"></span>
                                 </span>
-                                <input type="text" class="form-control" id="nzb_password" placeholder="$T('Glitter-unpackPassword')" data-bind="value: filelist.modalPassword" />
+                                <input type="text" class="form-control" id="nzb_password" placeholder="$T('srv-password')" data-bind="value: filelist.modalPassword" />
                                 <button type="submit" class="btn btn-default">$T('Glitter-submit')</button>
                             </div>
                         </div>
@@ -401,13 +401,13 @@
                         </div>
                     </fieldset>
                     <fieldset>
-                        <legend>$T('Glitter-unpackPassword')</legend>
+                        <legend>$T('srv-password')</legend>
                         <div class="form-group">
                             <div class="input-group">
                                 <span class="input-group-addon">
                                     <span class="glyphicon glyphicon-lock"></span>
                                 </span>
-                                <input type="text" class="form-control" id="retry_job_password" placeholder="$T('Glitter-unpackPassword')" />
+                                <input type="text" class="form-control" id="retry_job_password" placeholder="$T('srv-password')" />
                             </div>
                         </div>
                     </fieldset>
