--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -115,7 +115,7 @@
                         <li data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-statusInterfaceOptions')" data-bind="click: loadStatusInfo">
                             <a href="#modal_options" data-toggle="modal"><span class="glyphicon glyphicon-wrench"></span></a>
                         </li>
-                        <li data-toggle="tooltip" data-placement="bottom" title="$T('Glitter-configure')">
+                        <li data-toggle="tooltip" data-placement="bottom" title="SABnzbd $T('menu-config')">
                             <a href="config"><span class="glyphicon glyphicon-cog"></span></a>
                         </li>
                         <li class="dropdown">
@@ -657,7 +657,7 @@
             glitterTranslate.noSelect = "$T('Glitter-noSelect')";
             glitterTranslate.sendThanks = "$T('Glitter-sendThanks')";
             glitterTranslate.chooseFile = "$T('Glitter-chooseFile')";
-            glitterTranslate.orphanedJobsMsg = "$T('Glitter-orphanedJobsMsg')";
+            glitterTranslate.orphanedJobsMsg = "$T('explain-orphans')";
             glitterTranslate.updateAvailable = "$T('Glitter-updateAvailable')";
             glitterTranslate.defaultText = "$T('default')";
             
@@ -680,6 +680,8 @@
             glitterTranslate.status['Script'] = "$T('stage-script')";
             glitterTranslate.status['Source'] = "$T('stage-source')";
             glitterTranslate.status['Servers'] = "$T('stage-servers')";
+            glitterTranslate.status['WARNING'] = "$T('Glitter-warning')";
+            glitterTranslate.status['ERROR'] = "$T('Glitter-error')";
 
             glitterTranslate.pp = [];
             glitterTranslate.pp['Download'] = "$T('pp-none')";
