Adding more date formats

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -219,8 +219,11 @@
                                 <div class="col-sm-4">
                                     <select name="general-date-format" class="form-control" data-bind="value: dateFormat">
                                         <option value="dd-MM-yy">DD-MM-YY</option>
+                                        <option value="dd-MM-yyyy">DD-MM-YYYY</option>
                                         <option value="MM/dd/yy">MM/DD/YY</option>
+                                        <option value="MM/dd/yyyy">MM/DD/YYYY</option>
                                         <option value="yyyy-dd-MM">YYYY-DD-MM</option>
+                                        <option value="yyyy-MM-dd">YYYY-MM-DD</option>
                                     </select>
                                 </div>
                             </div>
