--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -536,7 +536,7 @@
                                                     <input type="text" class="form-control ratings-report-hidden" name="ratings-report-comment" />
                                                 </label>
                                                 <br />
-                                                <button type="btn btn-default" class="btn btn-default">$T('send') <span class="glyphicon glyphicon-ok"></span></button>
+                                                <button type="button" class="btn btn-default">$T('send') <span class="glyphicon glyphicon-ok"></span></button>
                                             </form>
                                         </li>
                                     </ul>
