Added text to Plush speedlimit

--- a/interfaces/Plush/templates/main.tmpl
+++ b/interfaces/Plush/templates/main.tmpl
@@ -82,11 +82,11 @@
         <ul>
           <li class="main_sprite_container sprite_q_menu_pausefor">
             <ul>
-              <li><a>$T('Plush-maxSpeed'):&nbsp;&nbsp;<input type="text" id="maxSpeed-option" size="8" />&nbsp;&nbsp;%</a></li>
-              <li><a>
+              <li><span title="$T('Example'): 28%, 500K (=500KB/s), 5M (=5MB/s)">$T('Plush-maxSpeed'):&nbsp;&nbsp;<input type="text" id="maxSpeed-option" size="4" />&nbsp;&nbsp;% ($T('or') K/M)</span></li>
+              <li><span>
                 <input type="button" value="$T('Plush-reset')" id="maxSpeed-disable" class="float-right" />
                 <input type="button" value="$T('button-save')" id="maxSpeed-enable" class="float-right" />
-              </a></li>
+              </span></li>
             </ul>
         </li>
         </ul>
