--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -151,7 +151,7 @@
                                 <tbody data-bind="foreach: statusInfo.status.folders">
                                     <tr>
                                         <td><span class="glyphicon glyphicon-folder-open"></span></td>
-                                        <td class="row-wrap-text"><strong data-bind="text: folder"></strong></td>
+                                        <td class="row-wrap-text"><strong data-bind="html: folder"></strong></td>
                                         <td><a href="#" data-bind="attr: { 'data-folder': folder }, click: \$root.folderProcess" data-action="add" class="hoverbutton" data-toggle="tooltip" data-placement="left" title="$T('Glitter-backToQueue')"><span class="glyphicon glyphicon-plus-sign"></span></a></td>
                                         <td><a href="#" data-bind="attr: { 'data-folder': folder }, click: \$root.folderProcess" data-action="delete" class="hoverbutton" data-toggle="tooltip" data-placement="left" title="$T('Glitter-deleteJobAndFolders')"><span class="glyphicon glyphicon-trash"></span></a></td>
                                     </tr>
