Updating the wizard
Make everything more user-friendly and streamlined. Port and and # of
connections are now placed under 'Show more'. Clicking SSL will change
the port to 563.
Username and option for SSL removed from the wizard, they can be enabled
in the Config.

--- a/interfaces/wizard/inc_top.tmpl
+++ b/interfaces/wizard/inc_top.tmpl
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
 <html lang="$active_lang">
-  <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>$T('wizard-quickstart')</title>
-    <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" type="text/css" href="static/style.css"/>
-    <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="57x57" href="../staticcfg/ico/apple-touch-icon-57x57.png" />
-    <link rel="apple-touch-icon" sizes="60x60" href="../staticcfg/ico/apple-touch-icon-60x60.png" />
-    <link rel="apple-touch-icon" sizes="72x72" href="../staticcfg/ico/apple-touch-icon-72x72.png" />
-    <link rel="apple-touch-icon" sizes="76x76" href="../staticcfg/ico/apple-touch-icon-76x76.png" />
-    <link rel="apple-touch-icon" sizes="114x114" href="../staticcfg/ico/apple-touch-icon-114x114.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="../staticcfg/ico/apple-touch-icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="144x144" href="../staticcfg/ico/apple-touch-icon-144x144.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="../staticcfg/ico/apple-touch-icon-152x152.png" />
-  </head>
-  <body>
-  <img id="logo" src="static/images/icon_sab.png" alt="SABnzbd" />
+    <head>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <title>$T('wizard-quickstart')</title>
+        <link rel="stylesheet" type="text/css" href="../staticcfg/bootstrap/css/bootstrap.min.css?pid=$version"/>
+        <link rel="stylesheet" type="text/css" href="static/style.css?pid=$version"/>
+        <link rel="shortcut icon" href="../staticcfg/ico/favicon.ico" />
+        <link rel="apple-touch-icon" sizes="57x57" href="../staticcfg/ico/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="60x60" href="../staticcfg/ico/apple-touch-icon-60x60.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="../staticcfg/ico/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="76x76" href="../staticcfg/ico/apple-touch-icon-76x76.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="../staticcfg/ico/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="120x120" href="../staticcfg/ico/apple-touch-icon-120x120.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="../staticcfg/ico/apple-touch-icon-144x144.png" />
+        <link rel="apple-touch-icon" sizes="152x152" href="../staticcfg/ico/apple-touch-icon-152x152.png" />
+        <script type="text/javascript" src="../staticcfg/js/jquery-1.11.2.min.js"></script>
+        <script type="text/javascript" src="../staticcfg/bootstrap/js/bootstrap.min.js"></script>
+    </head>
+    <body>
+        <img id="logo" src="static/images/icon_sab.png" alt="SABnzbd" />
