autocomplete=off for any forms with passwords
It might stop some browsers of autofilling stuff they shouldn't. However
if the user chose to save a username/password all modern browsers ignore
autocomplete=off.

https://developer.mozilla.org/en-US/docs/Web/Security/Securing_your_site/Turning_off_form_autocompletion

--- a/interfaces/Config/templates/config_server.tmpl
+++ b/interfaces/Config/templates/config_server.tmpl
@@ -3,7 +3,7 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-    <form action="addServer" method="post" novalidate>
+    <form action="addServer" method="post" autocomplete="off" novalidate>
     <input type="hidden" name="session" value="$session" />
     <div id="addServer">
         <div class="padding alt">
