--- a/interfaces/Config/templates/config_folders.tmpl
+++ b/interfaces/Config/templates/config_folders.tmpl
@@ -3,7 +3,7 @@
 <!--#include $webdir + "/_inc_header_uc.tmpl"#-->
 
 <div class="colmask">
-    <form action="saveDirectories" method="post" name="fullform" id="fullform">
+    <form action="saveDirectories" method="post" name="fullform" id="fullform" autocomplete="off">
     <input type="hidden" id="session" name="session" value="$session" />
     <input type="hidden" id="ajax" name="ajax" value="1" />
     <div class="section">
