--- a/interfaces/Config/templates/config_general.tmpl
+++ b/interfaces/Config/templates/config_general.tmpl
@@ -20,7 +20,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="port">$T('opt-port')</label>
-                    <input type="text" name="port" id="port" value="$port" size="8" />
+                    <input type="number" name="port" id="port" value="$port" size="8" />
                     <span class="desc">$T('explain-port')</span>
                 </div>
                 <div class="field-pair alt">
@@ -131,7 +131,7 @@
                 </div>
                 <div class="field-pair">
                     <label class="config" for="https_port">$T('opt-https_port')</label>
-                    <input type="text" name="https_port" id="https_port" value="$https_port" size="8" />
+                    <input type="number" name="https_port" id="https_port" value="$https_port" size="8" />
                     <span class="desc">$T('explain-https_port')</span>
                 </div>
                 <div class="field-pair alt">
@@ -165,7 +165,7 @@
                 <div class="field-pair alt">
                     <label class="config" for="bandwidth_max">$T('opt-bandwidth_max')</label>
                     <input type="text" name="bandwidth_max" id="bandwidth_max" value="$bandwidth_max"/>
-                    <span class="desc">$T('explain-bandwidth_max')</span>
+                    <span class="desc">$T('explain-bandwidth_max')<br />$T('wizard-bandwidth-explain')</span>
                 </div>
                 <div class="field-pair">
                     <label class="config" for="bandwidth_perc">$T('opt-bandwidth_perc')</label>
