Making modals closable by pressing escape

--- a/interfaces/Glitter/templates/include_modals.tmpl
+++ b/interfaces/Glitter/templates/include_modals.tmpl
@@ -1,4 +1,4 @@
-<div id="modal_options" class="modal fade">
+<div id="modal_options" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -268,7 +268,7 @@
     </div>
 </div>
 
-<div id="modal_add_nzb" class="modal fade">
+<div id="modal_add_nzb" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -336,7 +336,7 @@
     </div>
 </div>
 
-<div id="modal_item_files" class="modal fade">
+<div id="modal_item_files" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -401,7 +401,7 @@
     </div>
 </div>
 
-<div id="modal_retry_job" class="modal modal-small fade">
+<div id="modal_retry_job" class="modal modal-small fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -438,7 +438,7 @@
     </div>
 </div>
 
-<div id="history_script_log" class="modal fade">
+<div id="history_script_log" class="modal fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
@@ -483,7 +483,7 @@
     </div>
 </div>
 
-<div id="modal_purge_history" class="modal modal-small fade">
+<div id="modal_purge_history" class="modal modal-small fade" tabindex="-1">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
