--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -97,7 +97,7 @@
                                     </a>
                                     <div class="dropdown-menu max-speed-input">
                                         <div data-bind="visible: !bandwithLimit()">
-                                            <a href="config/general/">
+                                            <a href="config/general/#bandwidth_max">
                                                 <span class="glyphicon glyphicon-cog"></span> $T('Glitter-setMaxLinespeed')
                                             </a>
                                         </div>
