--- a/interfaces/Glitter/templates/main.tmpl
+++ b/interfaces/Glitter/templates/main.tmpl
@@ -121,7 +121,7 @@
                         <li class="dropdown">
                             <a href="#" data-toggle="dropdown" data-bind="css: { 'active-on-queue-finish-menu': onQueueFinish()}" onclick="keepOpen(this)"><span class="glyphicon glyphicon-off"></span></a>
                             <ul class="dropdown-menu menu-options">
-                                <li><a href="#modal_help" data-toggle="modal">$T('menu-help') <span class="glyphicon glyphicon-question-sign"></span></a></li>
+                                <li><a href="#modal_help" data-toggle="modal"><span class="glyphicon glyphicon-question-sign"></span> $T('menu-help')</a></li>
                                 <!--#if $have_quota or $have_rss_defined or $have_watched_dir or $pp_pause_event#--><li class="divider"></li><!--#end if#-->
                                 <!--#if $have_quota#--><li><a href="#" data-bind="click: doQueueAction" data-mode="reset_quota">$T('link-resetQuota')</a></li><!--#end if#-->
                                 <!--#if $have_rss_defined#--><li><a href="#" data-bind="click: doQueueAction" data-mode="rss_now">$T('button-rssNow')</a></li><!--#end if#-->
@@ -131,7 +131,7 @@
                                 <li><a href="shutdown?session=$session" data-bind="click: shutdownSAB">$T('shutdownSab')</a></li>
                                 <li><a href="#" data-bind="click: restartSAB">$T('Glitter-restartSab')</a></li>
                                 <li class="divider"></li>
-                                <li class="dropdown-header">$T('Glitter-onFinish'):</li>
+                                <li class="dropdown-header"><span class="glyphicon glyphicon-off"></span> $T('Glitter-onFinish'):</li>
                                 <li>
                                     <select data-bind="value: onQueueFinish" class="form-control">
                                         <option value=""></option>
@@ -276,7 +276,7 @@
                             <td class="timeleft" data-bind="text: timeLeft"></td>
                             <td class="delete">
                                 <label data-bind="visible: !isGrabbing() && parent.isMultiEditing()">
-                                    <input type="checkbox" name="multiedit" title="$T('Glitter-multiSelect')" data-bind="click: parent.addMultiEdit" />
+                                    <input type="checkbox" name="multiedit" title="$T('Glitter-multiSelect')" data-bind="click: parent.addMultiEdit, attr: { 'id': 'multiedit_' + id } " />
                                 </label>
                                 <div class="dropdown" data-bind="visible: !isGrabbing() && !parent.isMultiEditing()">
                                     <a href="#" data-toggle="dropdown" onclick="keepOpen(this)">
